--- a/site/blueprints/faq.yml
+++ b/site/blueprints/faq.yml
@@ -68,3 +68,16 @@ fields:
         label: Answer
         type: textarea
 
+
+  line2: 
+    type: line
+
+  metatitle:
+    label: Meta Title
+    type: text
+    width: 1/3
+
+  metadescription:
+    label: Meta Description
+    type: text
+    width: 2/3
