--- a/site/blueprints/home.yml
+++ b/site/blueprints/home.yml
@@ -1,5 +1,4 @@
 title: Home
-
 pages: false
 
 fields:
@@ -43,4 +42,17 @@ fields:
           fetch: children
           value: '{{uid}}'
           text: '{{title}}'
-      
+
+
+  line2: 
+    type: line
+
+  metatitle:
+    label: Meta Title
+    type: text
+    width: 1/3
+
+  metadescription:
+    label: Meta Description
+    type: text
+    width: 2/3
