--- a/site/blueprints/clients.yml
+++ b/site/blueprints/clients.yml
@@ -38,3 +38,17 @@ fields:
       text:
         label: Text
         type: simplemde
+
+
+  line2: 
+    type: line
+
+  metatitle:
+    label: Meta Title
+    type: text
+    width: 1/3
+
+  metadescription:
+    label: Meta Description
+    type: text
+    width: 2/3
