--- a/site/blueprints/project.yml
+++ b/site/blueprints/project.yml
@@ -74,3 +74,16 @@ fields:
             label: (Right) ..image
             type: image
     
+
+  line2: 
+    type: line
+
+  metatitle:
+    label: Meta Title
+    type: text
+    width: 1/3
+
+  metadescription:
+    label: Meta Description
+    type: text
+    width: 2/3
