--- a/site/blueprints/projects.yml
+++ b/site/blueprints/projects.yml
@@ -14,3 +14,17 @@ fields:
   title:
     label: Title
     type:  text
+
+
+  line2: 
+    type: line
+
+  metatitle:
+    label: Meta Title
+    type: text
+    width: 1/3
+
+  metadescription:
+    label: Meta Description
+    type: text
+    width: 2/3
