--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
   "name": "nonfiction",
-  "description": "Kirby website", 
-  "version": "1.0.0",
+  "description": "Kirby website",
+  "version": "1.1.0",
   "private": true,
   "engines": {
     "node": "~6.10.3",
     "npm": "~3.10.10"
   },
-  "dependencies": {
+  "devDependencies": {
     "autoprefixer": "~6.3.1",
+    "browser-sync": "^2.26.7",
+    "connect-modrewrite": "^0.10.2",
     "gm": "1.17.0",
     "gmsmith": "0.5.0",
     "grunt": "0.4.5",
     "grunt-cache-bust": "~1.0.0",
-    "grunt-contrib-clean": "0.7.0",
+    "grunt-contrib-clean": "2.0.0",
     "grunt-contrib-compass": "0.7.2",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-htmlmin": "0.4.0",
     "grunt-contrib-uglify": "~0.11",
     "grunt-inline-css": "0.1.5",
+    "grunt-php2html": "0.2.0",
     "grunt-postcss": "~0.7.1",
     "grunt-spritesmith": "4.6.1",
     "grunt-text-replace": "0.4.0",
-    "grunt-php2html": "0.2.0",
-    "grunt-tree": "git+https://github.com/Boycce/grunt-tree.git"
+    "grunt-tree": "git+https://github.com/Boycce/grunt-tree.git",
+    "gulp": "^3.9.1",
+    "gulp-connect-php": "^1.0.3",
+    "run-sequence": "^2.2.1"
   }
 }
