--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "description": "Kirby website",
   "version": "1.1.0",
   "private": true,
+  "scripts": {
+    "build": "grunt",
+    "dev": "gulp"
+  },
   "engines": {
     "node": "~6.10.3",
     "npm": "~3.10.10"
